--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,9 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      <img class="header-logo" alt="logo" height="40" src="assets/imgs/logo.png">
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
